--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.html",
     "scripts": {
+        "start": "concurrently \"json-server -p 7777 -w db.json\" \"gulp\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
@@ -14,6 +15,7 @@
         "gulp-clean-css": "^4.3.0",
         "gulp-concat": "^2.6.1",
         "gulp-sass": "^5.1.0",
+        "json-server": "^0.17.1",
         "node-sass": "^7.0.3",
         "sass": "^1.55.0"
     }
